--- a/All-About-Learning/Express/package.json
+++ b/All-About-Learning/Express/package.json
@@ -9,6 +9,7 @@
   "author": "Prasenjit",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pug": "^3.0.2"
   }
