--- a/All-About-Learning/Express/package.json
+++ b/All-About-Learning/Express/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "node": "^21.2.0",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
